--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,28 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <scope>provided</scope>
+      <version>1.7.25</version>
+<!--      <scope>provided</scope>-->
+    </dependency>
+    <dependency>
+      <groupId>com.uber</groupId>
+      <artifactId>heatpipe-producer-wrapper</artifactId>
+      <version>0.0.9</version>
     </dependency>
     <dependency>
       <groupId>com.uber.m3</groupId>
       <artifactId>tally-m3</artifactId>
+      <version>0.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>30.1-jre</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.8</version>
     </dependency>
   </dependencies>
 
